--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@
 img, video {
   width: 100%; }
 
+a {
+  text-decoration: none;
+  color: inherit; }
+
 .page_content {
   width: 100%;
   height: 100vh; }
