--- a/css/style.scss
+++ b/css/style.scss
@@ -108,7 +108,36 @@ a {
     }
   }
 }
-
+.page_content_new_pro {
+  width: 100%;
+  height: 100vh;
+  .content {
+    width: 80%;
+    margin: 0 auto;
+    .logo {
+      width: 30%;
+      margin-top: 8em;
+      @include small {
+        width: 100%;
+      }
+    }
+    .phrase {
+      @include font;
+      text-align: center;
+    }
+    .bar {
+      border: 1px black solid;
+      width: 100%;
+      height: 20px;
+      .loadbar {
+        width:100%;
+        height:100%;
+        background:black;
+        -webkit-animation: load 3s ease-in;
+      }
+    }
+  }
+}
 
 
 
