--- a/css/style.scss
+++ b/css/style.scss
@@ -114,26 +114,47 @@ a {
   .content {
     width: 80%;
     margin: 0 auto;
-    .logo {
-      width: 30%;
-      margin-top: 8em;
-      @include small {
-        width: 100%;
-      }
-    }
-    .phrase {
+    .create {
       @include font;
+      font-size: .8em;
+    }
+    .profile {
+      @include font-black;
+      background: $grey;
+      text-align: center;
+      padding: 1px;
+      width: 80%;
+      margin: 5em auto;
+      border-radius: 2px;
+    }
+    .or {
+      @include font;
+      font-size: 1.25em;
       text-align: center;
     }
-    .bar {
-      border: 1px black solid;
-      width: 100%;
+    .login_bar {
+      width: 80%;
       height: 20px;
-      .loadbar {
-        width:100%;
-        height:100%;
-        background:black;
-        -webkit-animation: load 3s ease-in;
+      margin: 5em auto;
+      .twitter {
+        width: 50%;
+        background:blue;
+        float: left;
+        width: 50px;
+        margin: 0 auto;
+      }
+      .facebook {
+        width: 50%;
+        background:green;
+        float: left;
+        width: 50px; 
+        margin: 0 11%;
+      }
+      .other {
+        width: 50%;
+        background:red;
+        float: left;
+        width: 50px;
       }
     }
   }
