--- a/css/style.scss
+++ b/css/style.scss
@@ -117,7 +117,7 @@ a {
     .create {
       @include font;
       font-size: .8em;
-      margin-bottom: 5em;
+      margin-bottom: 4em;
     }
     .inputs {
       input, input[type="password"], input[type="search"], isindex {
@@ -127,7 +127,7 @@ a {
         background-color: #cecece;
         border: none;
         padding: 10px;
-        width: 95%;
+        width: 100%;
         margin: 0.5em 0;
         border-image-source: initial;
         border-image-slice: initial;
@@ -137,7 +137,30 @@ a {
         -webkit-rtl-ordering: logical;
         -webkit-user-select: text;
         cursor: auto;
-        font-size: 24px;
+        font-size: 1.5em;
+        box-sizing: border-box;
+      }
+    }
+    .button {
+      input[type="button"], input[type="submit"], input[type="reset"], input[type="file"]::-webkit-file-upload-button, button {
+        @include font;
+        align-items: flex-start;
+        letter-spacing: 2px;
+        text-align: center;
+        cursor: default;
+        color: buttontext;
+        padding: 6px 6px;
+        border: 2px outset buttonface;
+        border-image-source: initial;
+        border-image-slice: initial;
+        border-image-width: initial;
+        border-image-outset: initial;
+        border-image-repeat: initial;
+        background-color: buttonface;
+        box-sizing: border-box;
+        font-size: 1.5em;
+        float: right;
+        margin-top: 1em;
       }
     }
   }
