--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ a {
       cursor: default;
       color: buttontext;
       padding: 6px 6px;
-      border: 2px outset buttonface;
+      border: none;
       border-image-source: initial;
       border-image-slice: initial;
       border-image-width: initial;
@@ -126,7 +126,8 @@ a {
       box-sizing: border-box;
       font-size: 1.5em;
       float: right;
-      margin-top: 1em; }
+      margin-top: 1em;
+      background: #cecece; }
 
 @-webkit-keyframes load {
   0% {
