--- a/css/style.scss
+++ b/css/style.scss
@@ -150,7 +150,7 @@ a {
         cursor: default;
         color: buttontext;
         padding: 6px 6px;
-        border: 2px outset buttonface;
+        border: none;
         border-image-source: initial;
         border-image-slice: initial;
         border-image-width: initial;
@@ -161,6 +161,7 @@ a {
         font-size: 1.5em;
         float: right;
         margin-top: 1em;
+        background: $grey;
       }
     }
   }
