--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,32 @@ a {
       margin-top: 1em;
       background: #cecece; }
 
+.page_content_loadingmap {
+  width: 100%;
+  height: 100vh; }
+  .page_content_loadingmap .content {
+    width: 80%;
+    margin: 0 auto; }
+    .page_content_loadingmap .content .logo {
+      width: 30%;
+      margin-top: 8em; }
+      @media only screen and (max-width: 30em) {
+        .page_content_loadingmap .content .logo {
+          width: 100%; } }
+    .page_content_loadingmap .content .phrase {
+      font-family: ostrich, sans-serif;
+      text-align: center; }
+    .page_content_loadingmap .content .bar {
+      border: 1px black solid;
+      width: 100%;
+      height: 20px;
+      margin-top: 10em; }
+      .page_content_loadingmap .content .bar .loadbar {
+        width: 100%;
+        height: 100%;
+        background: black;
+        -webkit-animation: load 5s ease-in; }
+
 @-webkit-keyframes load {
   0% {
     width: 0%; }
