--- a/css/style.scss
+++ b/css/style.scss
@@ -166,7 +166,37 @@ a {
     }
   }
 }
-
+.page_content_loadingmap {
+  width: 100%;
+  height: 100vh;
+  .content {
+    width: 80%;
+    margin: 0 auto;
+    .logo {
+      width: 30%;
+      margin-top: 8em;
+      @include small {
+        width: 100%;
+      }
+    }
+    .phrase {
+      @include font;
+      text-align: center;
+    }
+    .bar {
+      border: 1px black solid;
+      width: 100%;
+      height: 20px;
+      margin-top: 10em;
+      .loadbar {
+        width:100%;
+        height:100%;
+        background:black;
+        -webkit-animation: load 5s ease-in;
+      }
+    }
+  }
+}
 
 
 
