--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,8 @@ a {
 
 .page_content_loadingmap {
   width: 100%;
-  height: 100vh; }
+  height: 100vh;
+  background: url(img/map_outline.png); }
   .page_content_loadingmap .content {
     width: 80%;
     margin: 0 auto; }
