--- a/css/style.css
+++ b/css/style.css
@@ -1,173 +1,73 @@
-@font-face {
-  font-family: ostrich;
-  src: url("fonts/ostrichsans.woff") format("woff"), url("fonts/ostrichsans.ttf") format("truetype"); }
-@font-face {
-  font-family: ostrich-black;
-  src: url("fonts/ostrichsans-black.woff") format("woff"), url("fonts/ostrichsans-black.ttf") format("truetype"); }
-img, video {
-  width: 100%; }
+/*
+Syntax error: Invalid CSS after "...img/map_outline": expected ")", was ".png);"
+        on line 172 of ./css/style.scss
 
-a {
-  text-decoration: none;
-  color: inherit; }
+167:   }
+168: }
+169: .page_content_loadingmap {
+170:   width: 100%;
+171:   height: 100vh;
+172:   background: src(img/map_outline.png);
+173:   .content {
+174:     width: 80%;
+175:     margin: 0 auto;
+176:     .logo {
+177:       width: 30%;
 
-.page_content {
-  width: 100%;
-  height: 100vh; }
-  .page_content .content {
-    width: 80%;
-    margin: 0 auto; }
-    .page_content .content .logo {
-      width: 30%;
-      margin-top: 8em; }
-      @media only screen and (max-width: 30em) {
-        .page_content .content .logo {
-          width: 100%; } }
-    .page_content .content .phrase {
-      font-family: ostrich, sans-serif;
-      text-align: center; }
-    .page_content .content .bar {
-      border: 1px black solid;
-      width: 100%;
-      height: 20px; }
-      .page_content .content .bar .loadbar {
-        width: 100%;
-        height: 100%;
-        background: black;
-        -webkit-animation: load 3s ease-in; }
-
-.page_content_login {
-  width: 100%;
-  height: 100vh; }
-  .page_content_login .content {
-    width: 80%;
-    margin: 0 auto; }
-    .page_content_login .content .create {
-      font-family: ostrich, sans-serif;
-      font-size: .8em; }
-    .page_content_login .content .profile {
-      font-family: ostrich-black, sans-serif;
-      background: #cecece;
-      text-align: center;
-      padding: 1px;
-      width: 80%;
-      margin: 5em auto;
-      border-radius: 2px; }
-    .page_content_login .content .or {
-      font-family: ostrich, sans-serif;
-      font-size: 1.25em;
-      text-align: center; }
-    .page_content_login .content .login_bar {
-      width: 80%;
-      height: 20px;
-      margin: 5em auto; }
-      .page_content_login .content .login_bar .twitter {
-        width: 50%;
-        background: blue;
-        float: left;
-        width: 50px;
-        margin: 0 auto; }
-      .page_content_login .content .login_bar .facebook {
-        width: 50%;
-        background: green;
-        float: left;
-        width: 50px;
-        margin: 0 11%; }
-      .page_content_login .content .login_bar .other {
-        width: 50%;
-        background: red;
-        float: left;
-        width: 50px; }
-
-.page_content_new_pro {
-  width: 100%;
-  height: 100vh; }
-  .page_content_new_pro .content {
-    width: 80%;
-    margin: 0 auto; }
-    .page_content_new_pro .content .create {
-      font-family: ostrich, sans-serif;
-      font-size: .8em;
-      margin-bottom: 4em; }
-    .page_content_new_pro .content .inputs input, .page_content_new_pro .content .inputs input[type="password"], .page_content_new_pro .content .inputs input[type="search"], .page_content_new_pro .content .inputs isindex {
-      font-family: ostrich, sans-serif;
-      -webkit-appearance: textfield;
-      letter-spacing: 2px;
-      background-color: #cecece;
-      border: none;
-      padding: 10px;
-      width: 100%;
-      margin: 0.5em 0;
-      border-image-source: initial;
-      border-image-slice: initial;
-      border-image-width: initial;
-      border-image-outset: initial;
-      border-image-repeat: initial;
-      -webkit-rtl-ordering: logical;
-      -webkit-user-select: text;
-      cursor: auto;
-      font-size: 1.5em;
-      box-sizing: border-box; }
-    .page_content_new_pro .content .button input[type="button"], .page_content_new_pro .content .button input[type="submit"], .page_content_new_pro .content .button input[type="reset"], .page_content_new_pro .content .button input[type="file"]::-webkit-file-upload-button, .page_content_new_pro .content .button button {
-      font-family: ostrich, sans-serif;
-      align-items: flex-start;
-      letter-spacing: 2px;
-      text-align: center;
-      cursor: default;
-      color: buttontext;
-      padding: 6px 6px;
-      border: none;
-      border-image-source: initial;
-      border-image-slice: initial;
-      border-image-width: initial;
-      border-image-outset: initial;
-      border-image-repeat: initial;
-      background-color: buttonface;
-      box-sizing: border-box;
-      font-size: 1.5em;
-      float: right;
-      margin-top: 1em;
-      background: #cecece; }
-
-.page_content_loadingmap {
-  width: 100%;
-  height: 100vh;
-  background: url(img/map_outline.png); }
-  .page_content_loadingmap .content {
-    width: 80%;
-    margin: 0 auto; }
-    .page_content_loadingmap .content .logo {
-      width: 30%;
-      margin-top: 8em; }
-      @media only screen and (max-width: 30em) {
-        .page_content_loadingmap .content .logo {
-          width: 100%; } }
-    .page_content_loadingmap .content .phrase {
-      font-family: ostrich, sans-serif;
-      text-align: center; }
-    .page_content_loadingmap .content .bar {
-      border: 1px black solid;
-      width: 100%;
-      height: 20px;
-      margin-top: 10em; }
-      .page_content_loadingmap .content .bar .loadbar {
-        width: 100%;
-        height: 100%;
-        background: black;
-        -webkit-animation: load 5s ease-in; }
-
-@-webkit-keyframes load {
-  0% {
-    width: 0%; }
-
-  50% {
-    width: 10%; }
-
-  80% {
-    width: 50%; }
-
-  90% {
-    width: 90%; }
-
-  100% {
-    width: 100%; } }
+Backtrace:
+./css/style.scss:172
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/scss/parser.rb:1306:in `expected'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/script/lexer.rb:216:in `expected!'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/script/parser.rb:578:in `assert_tok'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/script/parser.rb:401:in `funcall'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/script/parser.rb:380:in `ident'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/script/parser.rb:240:in `unary_not'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/script/parser.rb:240:in `unary_div'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/script/parser.rb:240:in `unary_minus'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/script/parser.rb:240:in `unary_plus'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/script/parser.rb:221:in `times_div_or_mod'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/script/parser.rb:221:in `plus_or_minus'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/script/parser.rb:221:in `relational'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/script/parser.rb:221:in `eq_or_neq'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/script/parser.rb:221:in `and_expr'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/script/parser.rb:221:in `or_expr'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/script/parser.rb:354:in `space'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/script/parser.rb:339:in `interpolation'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/script/parser.rb:287:in `expr'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/script/parser.rb:569:in `assert_expr'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/script/parser.rb:56:in `parse'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/scss/parser.rb:1170:in `sass_script'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/scss/parser.rb:1018:in `value!'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/scss/parser.rb:980:in `declaration'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/scss/parser.rb:683:in `block in declaration_or_ruleset'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/scss/parser.rb:1282:in `call'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/scss/parser.rb:1282:in `rethrow'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/scss/parser.rb:693:in `declaration_or_ruleset'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/scss/parser.rb:655:in `block_child'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/scss/parser.rb:647:in `block_contents'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/scss/parser.rb:636:in `block'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/scss/parser.rb:629:in `ruleset'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/scss/parser.rb:654:in `block_child'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/scss/parser.rb:647:in `block_contents'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/scss/parser.rb:116:in `stylesheet'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/scss/parser.rb:41:in `parse'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/engine.rb:409:in `_to_tree'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/engine.rb:274:in `render'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/plugin/compiler.rb:414:in `update_stylesheet'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/plugin/compiler.rb:189:in `block in update_stylesheets'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/plugin/compiler.rb:186:in `each'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/plugin/compiler.rb:186:in `update_stylesheets'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/plugin/compiler.rb:393:in `on_file_changed'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.3.4/lib/sass/plugin/compiler.rb:248:in `block in watch'
+/Library/Ruby/Gems/2.0.0/gems/listen-1.3.1/lib/listen/listener.rb:252:in `call'
+/Library/Ruby/Gems/2.0.0/gems/listen-1.3.1/lib/listen/listener.rb:252:in `on_change'
+/Library/Ruby/Gems/2.0.0/gems/listen-1.3.1/lib/listen/listener.rb:290:in `block in initialize_adapter'
+/Library/Ruby/Gems/2.0.0/gems/listen-1.3.1/lib/listen/adapter.rb:252:in `call'
+/Library/Ruby/Gems/2.0.0/gems/listen-1.3.1/lib/listen/adapter.rb:252:in `report_changes'
+/Library/Ruby/Gems/2.0.0/gems/listen-1.3.1/lib/listen/adapter.rb:321:in `poll_changed_directories'
+/Library/Ruby/Gems/2.0.0/gems/listen-1.3.1/lib/listen/adapter.rb:297:in `block in start_poller'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Syntax error: Invalid CSS after \"...img/map_outline\": expected \")\", was \".png);\"\A         on line 172 of ./css/style.scss\A \A 167:   }\A 168: }\A 169: .page_content_loadingmap {\A 170:   width: 100%;\A 171:   height: 100vh;\A 172:   background: src(img/map_outline.png);\A 173:   .content {\A 174:     width: 80%;\A 175:     margin: 0 auto;\A 176:     .logo {\A 177:       width: 30%;"; }
