--- a/css/style.scss
+++ b/css/style.scss
@@ -169,7 +169,10 @@ a {
 .page_content_loadingmap {
   width: 100%;
   height: 100vh;
-  background: url('img/map_outline.png');
+  background: url('../img/map_outline.png');
+  background-position: center;
+  background-size: cover;
+  padding-top: 1px;
   .content {
     width: 80%;
     margin: 0 auto;
